name:                warp-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/warp-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Middleware
                     , Registration
                     , Router
  build-depends:       base >= 4.7 && < 5
                     , async
                     , bytestring
                     , datetime
                     , eventful-core
                     , eventful-memory
                     , http-types
                     , neat-interpolation
                     , smtp-mail
                     , stm
                     , time
                     , text
                     , unagi-chan
                     , urlencoded
                     , utf8-string
                     , uuid
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable warp-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , warp-test
  default-language:    Haskell2010

test-suite warp-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , warp-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/warp-test
