name:                warp-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/warp-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Css
                     , Events
                     , Lib
                     , Mailer
                     , Middleware
                     , ReadView
                     , Registration
                     , Router
                     , Session
                     , Store
                     , Store.Types
                     , Store.Db
                     , Store.Memory
                     , Templates
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-casing
                     , async
                     , blazeT
                     , bytestring
                     , clay
                     , contravariant
                     , cryptohash
                     , datetime
                     , email-validate
                     , envy
                     , errors
                     , eventful-core
                     , eventful-memory
                     , eventful-postgresql
                     , eventful-sql-common
                     , http-types
                     , monad-control
                     , mime-mail
                     , mtl
                     , neat-interpolation
                     , network-uri
                     , HaskellNet-SSL
                     , persistent-database-url
                     , persistent-postgresql
                     , persistent-template
                     , resource-pool
                     , stm
                     , stringable
                     , time
                     , template-haskell
                     , text
                     , text-format
                     , transformers
                     , unagi-chan
                     , union-sums
                     , urlencoded
                     , utf8-string
                     , uuid
                     , wai
                     , wai-transformers
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable warp-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , async
                     , bytestring
                     , datetime
                     , envy
                     , monad-logger
                     , mtl
                     , persistent-postgresql
                     , text
                     , unagi-chan
                     , utf8-string
                     , uuid
                     , wai
                     , wai-extra
                     , wai-transformers
                     , warp
                     , warp-test
  default-language:    Haskell2010

test-suite warp-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , async
                     , contravariant
                     , datetime
                     , errors
                     , eventful-core
                     , HUnit
                     , hspec
                     , time
                     , unagi-chan
                     , uuid
                     , warp-test
  other-modules:       RegistrationSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/warp-test
